<resources>
    <string name="app_name">CTFgame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_select">Select</string>
    <string name="menu_start">Start</string>
    <string name="menu_prep">Game Prep</string>
    <string name="game_title">CAPTURE THE FLAG</string>
    <string name="btn_host_game">Host game</string>
    <string name="btn_join_game">Join game</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_cancel_game">Cancel Game</string>
    <string name="lobby_title">Lobby</string>
    <string name="menu_lobby">Lobby</string>
    <string name="btn_leave_game">Leave Game</string>
    <string name="menu_game">Game</string>
    <string name="player_name">Player name</string>
    <string name="game_id">Game ID</string>

    <string name="no_team_selected">No Team Selected</string>
    <string name="team_blue">Blue Team</string>
    <string name="team_red">Red Team</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>