<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.StartFragment"
    android:background="@color/primary">

    <TextView
        android:id="@+id/text_game_title"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/coiny"
        android:gravity="center"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_join"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_join_game"
        app:layout_constraintBottom_toTopOf="@id/button_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_host"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:text="@string/btn_host_game"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>